syntax = "proto3";
import "google/protobuf/empty.proto";
package catagory_details_management ; 


service CatagoryDetailManager {

	rpc GetCatagoryDetailInFor (GetCatagoryDetailInForRequest) returns (GetCatagoryDetailInForResponse);

}

message GetCatagoryDetailInForRequest{
	string  category_detail_id = 1;
}


message GetCatagoryDetailInForResponse{
	string category_detail_id = 1;
	string category_detail_name = 2;
	string category_id =3 ; 
	string category_name = 4;
}
